// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test layout process > config/config-basic.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 968",
      "viewName": "grid0",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 1000",
  "viewName": "implicitRoot",
}
`;

exports[`Test layout process > config/config-import-override.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 968",
      "viewName": "import-site-config",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 1000",
  "viewName": "viewRoot",
}
`;

exports[`Test layout process > config/config-imported-track.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 463",
      "viewName": "track-a",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 505, width: 1468, height: 463",
      "viewName": "track-b",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 1000",
  "viewName": "viewRoot",
}
`;

exports[`Test layout process > config/config-scale-schemes-by-type.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 968",
          "viewName": "layer0",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 968",
          "viewName": "layer1",
        },
      ],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 968",
      "viewName": "grid0",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 1000",
  "viewName": "implicitRoot",
}
`;

exports[`Test layout process > config/config-scoped-view.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 463, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 463",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 463",
      "viewName": "inherits-parent",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 505, width: 32, height: 463",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 505, width: 1468, height: 463",
      "viewName": "overrides-parent",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 1000",
  "viewName": "viewRoot",
}
`;

exports[`Test layout process > config/config-theme-comparison-bars.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 200, width: 260, height: 32",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 32, y: 200, width: 260, height: 32",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 32, y: 200, width: 260, height: 32",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 32, y: 200, width: 260, height: 32",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 200, width: 260, height: 32",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 32, y: 200, width: 260, height: 32",
          "viewName": "axis_bottom",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
          "viewName": "axis_left",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 0, width: 260, height: 200",
          "viewName": "genomespy-bars",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 0, width: 260, height: 200",
          "viewName": "title0",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 335, y: 0, width: 260, height: 200",
              "viewName": "grid_lines",
            },
          ],
          "coords": "Rectangle: x: 335, y: 0, width: 260, height: 200",
          "viewName": "grid_layers",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 335, y: 0, width: 260, height: 200",
          "viewName": "backgroundStroke1",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 335, y: 200, width: 260, height: 33",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 335, y: 200, width: 260, height: 33",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 335, y: 200, width: 260, height: 33",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 335, y: 200, width: 260, height: 33",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 335, y: 200, width: 260, height: 33",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 335, y: 200, width: 260, height: 33",
          "viewName": "axis_bottom",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 302, y: 0, width: 33, height: 200",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 302, y: 0, width: 33, height: 200",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 302, y: 0, width: 33, height: 200",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 302, y: 0, width: 33, height: 200",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 302, y: 0, width: 33, height: 200",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 302, y: 0, width: 33, height: 200",
          "viewName": "axis_left",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 335, y: 0, width: 260, height: 200",
          "viewName": "vegalite-like-bars",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 335, y: 0, width: 260, height: 200",
          "viewName": "title1",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 627, height: 266",
      "viewName": "grid0",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 490, width: 260, height: 32",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 32, y: 490, width: 260, height: 32",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 32, y: 490, width: 260, height: 32",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 32, y: 490, width: 260, height: 32",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 490, width: 260, height: 32",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 32, y: 490, width: 260, height: 32",
          "viewName": "axis_bottom",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 290, width: 32, height: 200",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 290, width: 32, height: 200",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 290, width: 32, height: 200",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 0, y: 290, width: 32, height: 200",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 290, width: 32, height: 200",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 0, y: 290, width: 32, height: 200",
          "viewName": "axis_left",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 290, width: 260, height: 200",
          "viewName": "genomespy-scatter",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 290, width: 260, height: 200",
          "viewName": "title0",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 335, y: 290, width: 260, height: 200",
              "viewName": "grid_lines",
            },
          ],
          "coords": "Rectangle: x: 335, y: 290, width: 260, height: 200",
          "viewName": "grid_layers",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 335, y: 290, width: 260, height: 200",
          "viewName": "backgroundStroke1",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 335, y: 490, width: 260, height: 33",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 335, y: 490, width: 260, height: 33",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 335, y: 490, width: 260, height: 33",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 335, y: 490, width: 260, height: 33",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 335, y: 490, width: 260, height: 33",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 335, y: 490, width: 260, height: 33",
          "viewName": "axis_bottom",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 302, y: 290, width: 33, height: 200",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 302, y: 290, width: 33, height: 200",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 302, y: 290, width: 33, height: 200",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 302, y: 290, width: 33, height: 200",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 302, y: 290, width: 33, height: 200",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 302, y: 290, width: 33, height: 200",
          "viewName": "axis_left",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 335, y: 290, width: 260, height: 200",
          "viewName": "vegalite-like-scatter",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 335, y: 290, width: 260, height: 200",
          "viewName": "title1",
        },
      ],
      "coords": "Rectangle: x: 0, y: 290, width: 627, height: 266",
      "viewName": "grid1",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 627, height: 556",
  "viewName": "viewRoot",
}
`;

exports[`Test layout process > first.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 968",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 968",
      "viewName": "grid0",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 1000",
  "viewName": "implicitRoot",
}
`;

exports[`Test layout process > layout/grid/complex_grid_layout.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 42, y: 0, width: 846, height: 417",
          "viewName": "backgroundStroke0",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 42, y: 417, width: 846, height: 32",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 42, y: 417, width: 846, height: 32",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 42, y: 417, width: 846, height: 32",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 42, y: 417, width: 846, height: 32",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 42, y: 417, width: 846, height: 32",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 42, y: 417, width: 846, height: 32",
          "viewName": "axis_bottom",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 10, y: 0, width: 32, height: 417",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 10, y: 0, width: 32, height: 417",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 10, y: 0, width: 32, height: 417",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 10, y: 0, width: 32, height: 417",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 10, y: 0, width: 32, height: 417",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 10, y: 0, width: 32, height: 417",
          "viewName": "axis_left",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 42, y: 0, width: 846, height: 417",
          "viewName": "grid0",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 42, y: 489, width: 150, height: 479",
              "viewName": "backgroundStroke0",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 42, y: 968, width: 150, height: 32",
                  "viewName": "domain",
                },
                ViewCoords {
                  "children": [
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 42, y: 968, width: 150, height: 32",
                      "viewName": "ticks",
                    },
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 42, y: 968, width: 150, height: 32",
                      "viewName": "labels_main",
                    },
                  ],
                  "coords": "Rectangle: x: 42, y: 968, width: 150, height: 32",
                  "viewName": "ticks_and_labels",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 42, y: 968, width: 150, height: 32",
                  "viewName": "title",
                },
              ],
              "coords": "Rectangle: x: 42, y: 968, width: 150, height: 32",
              "viewName": "axis_bottom",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 489, width: 32, height: 479",
                  "viewName": "domain",
                },
                ViewCoords {
                  "children": [
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 0, y: 489, width: 32, height: 479",
                      "viewName": "ticks",
                    },
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 0, y: 489, width: 32, height: 479",
                      "viewName": "labels_main",
                    },
                  ],
                  "coords": "Rectangle: x: 0, y: 489, width: 32, height: 479",
                  "viewName": "ticks_and_labels",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 489, width: 32, height: 479",
                  "viewName": "title",
                },
              ],
              "coords": "Rectangle: x: 0, y: 489, width: 32, height: 479",
              "viewName": "axis_left",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 42, y: 489, width: 150, height: 479",
              "viewName": "grid0",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 254, y: 489, width: 634, height: 479",
              "viewName": "backgroundStroke1",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 254, y: 968, width: 634, height: 32",
                  "viewName": "domain",
                },
                ViewCoords {
                  "children": [
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 254, y: 968, width: 634, height: 32",
                      "viewName": "ticks",
                    },
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 254, y: 968, width: 634, height: 32",
                      "viewName": "labels_main",
                    },
                  ],
                  "coords": "Rectangle: x: 254, y: 968, width: 634, height: 32",
                  "viewName": "ticks_and_labels",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 254, y: 968, width: 634, height: 32",
                  "viewName": "title",
                },
              ],
              "coords": "Rectangle: x: 254, y: 968, width: 634, height: 32",
              "viewName": "axis_bottom",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 222, y: 489, width: 32, height: 479",
                  "viewName": "domain",
                },
                ViewCoords {
                  "children": [
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 222, y: 489, width: 32, height: 479",
                      "viewName": "ticks",
                    },
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 222, y: 489, width: 32, height: 479",
                      "viewName": "labels_main",
                    },
                  ],
                  "coords": "Rectangle: x: 222, y: 489, width: 32, height: 479",
                  "viewName": "ticks_and_labels",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 222, y: 489, width: 32, height: 479",
                  "viewName": "title",
                },
              ],
              "coords": "Rectangle: x: 222, y: 489, width: 32, height: 479",
              "viewName": "axis_left",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 254, y: 489, width: 634, height: 479",
              "viewName": "grid1",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 254, y: 489, width: 634, height: 479",
              "viewName": "title1",
            },
          ],
          "coords": "Rectangle: x: 0, y: 459, width: 908, height: 541",
          "viewName": "grid1",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 908, height: 1000",
      "viewName": "grid0",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 970, y: 0, width: 510, height: 968",
      "viewName": "backgroundStroke1",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 970, y: 968, width: 510, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 970, y: 968, width: 510, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 970, y: 968, width: 510, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 970, y: 968, width: 510, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 970, y: 968, width: 510, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 970, y: 968, width: 510, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 938, y: 0, width: 32, height: 968",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 938, y: 0, width: 32, height: 968",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 938, y: 0, width: 32, height: 968",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 938, y: 0, width: 32, height: 968",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 938, y: 0, width: 32, height: 968",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 938, y: 0, width: 32, height: 968",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 970, y: 0, width: 510, height: 968",
      "viewName": "grid1",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 1000",
  "viewName": "viewRoot",
}
`;

exports[`Test layout process > layout/grid/complex_grid_layout2.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 0, width: 681, height: 32",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 32, y: 0, width: 681, height: 32",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 32, y: 0, width: 681, height: 32",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 32, y: 0, width: 681, height: 32",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 0, width: 681, height: 32",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 32, y: 0, width: 681, height: 32",
          "viewName": "axis_top",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 32, y: 32, width: 681, height: 306",
                  "viewName": "grid_lines",
                },
              ],
              "coords": "Rectangle: x: 32, y: 32, width: 681, height: 306",
              "viewName": "grid_layers",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 32, width: 681, height: 306",
              "viewName": "backgroundStroke0",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 32, width: 32, height: 306",
                  "viewName": "domain",
                },
                ViewCoords {
                  "children": [
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 0, y: 32, width: 32, height: 306",
                      "viewName": "ticks",
                    },
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 0, y: 32, width: 32, height: 306",
                      "viewName": "labels_main",
                    },
                  ],
                  "coords": "Rectangle: x: 0, y: 32, width: 32, height: 306",
                  "viewName": "ticks_and_labels",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 32, width: 32, height: 306",
                  "viewName": "title",
                },
              ],
              "coords": "Rectangle: x: 0, y: 32, width: 32, height: 306",
              "viewName": "axis_left",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 32, width: 681, height: 306",
              "viewName": "grid0",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 32, y: 348, width: 681, height: 306",
                  "viewName": "grid_lines",
                },
              ],
              "coords": "Rectangle: x: 32, y: 348, width: 681, height: 306",
              "viewName": "grid_layers",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 348, width: 681, height: 306",
              "viewName": "backgroundStroke1",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 713, y: 348, width: 32, height: 306",
                  "viewName": "domain",
                },
                ViewCoords {
                  "children": [
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 713, y: 348, width: 32, height: 306",
                      "viewName": "ticks",
                    },
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 713, y: 348, width: 32, height: 306",
                      "viewName": "labels_main",
                    },
                  ],
                  "coords": "Rectangle: x: 713, y: 348, width: 32, height: 306",
                  "viewName": "ticks_and_labels",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 713, y: 348, width: 32, height: 306",
                  "viewName": "title",
                },
              ],
              "coords": "Rectangle: x: 713, y: 348, width: 32, height: 306",
              "viewName": "axis_right",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 348, width: 681, height: 306",
              "viewName": "grid1",
            },
          ],
          "coords": "Rectangle: x: 0, y: 32, width: 745, height: 621",
          "viewName": "grid0",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 663, width: 681, height: 305",
              "viewName": "grid_lines",
            },
          ],
          "coords": "Rectangle: x: 32, y: 663, width: 681, height: 305",
          "viewName": "grid_layers",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 663, width: 681, height: 305",
          "viewName": "backgroundStroke1",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 663, width: 32, height: 305",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 663, width: 32, height: 305",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 0, y: 663, width: 32, height: 305",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 0, y: 663, width: 32, height: 305",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 663, width: 32, height: 305",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 0, y: 663, width: 32, height: 305",
          "viewName": "axis_left",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 663, width: 681, height: 305",
          "viewName": "grid1",
        },
      ],
      "coords": "Rectangle: x: 0, y: 32, width: 745, height: 936",
      "viewName": "left",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 787, y: 32, width: 681, height: 306",
                  "viewName": "grid_lines",
                },
              ],
              "coords": "Rectangle: x: 787, y: 32, width: 681, height: 306",
              "viewName": "grid_layers",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 787, y: 32, width: 681, height: 306",
              "viewName": "backgroundStroke0",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 755, y: 32, width: 32, height: 306",
                  "viewName": "domain",
                },
                ViewCoords {
                  "children": [
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 755, y: 32, width: 32, height: 306",
                      "viewName": "ticks",
                    },
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 755, y: 32, width: 32, height: 306",
                      "viewName": "labels_main",
                    },
                  ],
                  "coords": "Rectangle: x: 755, y: 32, width: 32, height: 306",
                  "viewName": "ticks_and_labels",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 755, y: 32, width: 32, height: 306",
                  "viewName": "title",
                },
              ],
              "coords": "Rectangle: x: 755, y: 32, width: 32, height: 306",
              "viewName": "axis_left",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 787, y: 32, width: 681, height: 306",
              "viewName": "grid0",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 787, y: 348, width: 681, height: 306",
                  "viewName": "grid_lines",
                },
              ],
              "coords": "Rectangle: x: 787, y: 348, width: 681, height: 306",
              "viewName": "grid_layers",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 787, y: 348, width: 681, height: 306",
              "viewName": "backgroundStroke1",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 1468, y: 348, width: 32, height: 306",
                  "viewName": "domain",
                },
                ViewCoords {
                  "children": [
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 1468, y: 348, width: 32, height: 306",
                      "viewName": "ticks",
                    },
                    ViewCoords {
                      "children": [],
                      "coords": "Rectangle: x: 1468, y: 348, width: 32, height: 306",
                      "viewName": "labels_main",
                    },
                  ],
                  "coords": "Rectangle: x: 1468, y: 348, width: 32, height: 306",
                  "viewName": "ticks_and_labels",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 1468, y: 348, width: 32, height: 306",
                  "viewName": "title",
                },
              ],
              "coords": "Rectangle: x: 1468, y: 348, width: 32, height: 306",
              "viewName": "axis_right",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 787, y: 348, width: 681, height: 306",
              "viewName": "grid1",
            },
          ],
          "coords": "Rectangle: x: 755, y: 32, width: 745, height: 621",
          "viewName": "grid0",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 787, y: 663, width: 681, height: 305",
              "viewName": "grid_lines",
            },
          ],
          "coords": "Rectangle: x: 787, y: 663, width: 681, height: 305",
          "viewName": "grid_layers",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 787, y: 663, width: 681, height: 305",
          "viewName": "backgroundStroke1",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 755, y: 663, width: 32, height: 305",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 755, y: 663, width: 32, height: 305",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 755, y: 663, width: 32, height: 305",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 755, y: 663, width: 32, height: 305",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 755, y: 663, width: 32, height: 305",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 755, y: 663, width: 32, height: 305",
          "viewName": "axis_left",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 787, y: 968, width: 681, height: 32",
              "viewName": "domain",
            },
            ViewCoords {
              "children": [
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 787, y: 968, width: 681, height: 32",
                  "viewName": "ticks",
                },
                ViewCoords {
                  "children": [],
                  "coords": "Rectangle: x: 787, y: 968, width: 681, height: 32",
                  "viewName": "labels_main",
                },
              ],
              "coords": "Rectangle: x: 787, y: 968, width: 681, height: 32",
              "viewName": "ticks_and_labels",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 787, y: 968, width: 681, height: 32",
              "viewName": "title",
            },
          ],
          "coords": "Rectangle: x: 787, y: 968, width: 681, height: 32",
          "viewName": "axis_bottom",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 787, y: 663, width: 681, height: 305",
          "viewName": "grid1",
        },
      ],
      "coords": "Rectangle: x: 755, y: 32, width: 745, height: 936",
      "viewName": "right",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 1000",
  "viewName": "root",
}
`;

exports[`Test layout process > layout/grid/concat_points_text.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 200",
          "viewName": "grid_lines",
        },
      ],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 200",
      "viewName": "grid_layers",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 200",
      "viewName": "Points",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 200",
      "viewName": "backgroundStroke0",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 210, width: 1468, height: 758",
          "viewName": "grid_lines",
        },
      ],
      "coords": "Rectangle: x: 32, y: 210, width: 1468, height: 758",
      "viewName": "grid_layers",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 210, width: 1468, height: 758",
      "viewName": "Text",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 210, width: 1468, height: 758",
      "viewName": "backgroundStroke1",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 210, width: 32, height: 758",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 210, width: 32, height: 758",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 210, width: 32, height: 758",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 210, width: 32, height: 758",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 210, width: 32, height: 758",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 210, width: 32, height: 758",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 968",
  "viewName": "viewRoot",
}
`;

exports[`Test layout process > layout/grid/condensed_concat.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 323",
      "viewName": "backgroundStroke0",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 323",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 323",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 323",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 323",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 323",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 323",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 323",
      "viewName": "grid0",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 323",
      "viewName": "title0",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 323, width: 1468, height: 323",
      "viewName": "backgroundStroke1",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 323, width: 32, height: 323",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 323, width: 32, height: 323",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 323, width: 32, height: 323",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 323, width: 32, height: 323",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 323, width: 32, height: 323",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 323, width: 32, height: 323",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 323, width: 1468, height: 323",
      "viewName": "grid1",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 323, width: 1468, height: 323",
      "viewName": "title1",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 645, width: 1468, height: 323",
      "viewName": "backgroundStroke2",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 645, width: 32, height: 323",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 645, width: 32, height: 323",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 645, width: 32, height: 323",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 645, width: 32, height: 323",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 645, width: 32, height: 323",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 645, width: 32, height: 323",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 968, width: 1468, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 645, width: 1468, height: 323",
      "viewName": "grid2",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 645, width: 1468, height: 323",
      "viewName": "title2",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 968",
  "viewName": "viewRoot",
}
`;

exports[`Test layout process > layout/grid/shared_axis_at_root.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 100",
      "viewName": "backgroundStroke0",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 100",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 100",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 100",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 100",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 100",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 100",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 1468, height: 100",
      "viewName": "grid0",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 110, width: 1468, height: 200",
      "viewName": "backgroundStroke1",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 110, width: 32, height: 200",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 110, width: 32, height: 200",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 110, width: 32, height: 200",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 110, width: 32, height: 200",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 110, width: 32, height: 200",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 110, width: 32, height: 200",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 310, width: 1468, height: 20",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 310, width: 1468, height: 20",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 310, width: 1468, height: 20",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 310, width: 1468, height: 20",
          "viewName": "ticks_and_labels",
        },
      ],
      "coords": "Rectangle: x: 32, y: 310, width: 1468, height: 20",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 110, width: 1468, height: 200",
      "viewName": "grid1",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 1500, height: 310",
  "viewName": "viewRoot",
}
`;

exports[`Test layout process > marks/point/point2d.json 1`] = `
ViewCoords {
  "children": [
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 200, width: 200, height: 32",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 200, width: 200, height: 32",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 32, y: 200, width: 200, height: 32",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 32, y: 200, width: 200, height: 32",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 32, y: 200, width: 200, height: 32",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 32, y: 200, width: 200, height: 32",
      "viewName": "axis_bottom",
    },
    ViewCoords {
      "children": [
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
          "viewName": "domain",
        },
        ViewCoords {
          "children": [
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
              "viewName": "ticks",
            },
            ViewCoords {
              "children": [],
              "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
              "viewName": "labels_main",
            },
          ],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
          "viewName": "ticks_and_labels",
        },
        ViewCoords {
          "children": [],
          "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
          "viewName": "title",
        },
      ],
      "coords": "Rectangle: x: 0, y: 0, width: 32, height: 200",
      "viewName": "axis_left",
    },
    ViewCoords {
      "children": [],
      "coords": "Rectangle: x: 32, y: 0, width: 200, height: 200",
      "viewName": "grid0",
    },
  ],
  "coords": "Rectangle: x: 0, y: 0, width: 232, height: 232",
  "viewName": "implicitRoot",
}
`;
